--- a/index.css
+++ b/index.css
@@ -11,54 +11,26 @@
         scroll-behavior: smooth;
     }
 
-    body {
-        transform: scale(1.0);
-        transform-origin: 0 0;
-    }
-    
-    .hero{
+    header{
         height: 100vh;
-        width: 100%;
-        background-image: url(./images/background-image.jpeg);
+        background-image: url(images/background-image.jpeg);
+        background-size: cover;
         background-position: center;
-        background-size:cover;
+        position: relative;
+        padding: 0 2rem;
     }
 
-    #nav-bar{
-        display: flex;
-        align-items: center;
-        margin: 5rem 12rem 7rem 12rem;
-        padding:1rem;
-        justify-content: space-between;
-        border: 2px solid white;
-        border-radius: 60px;
-        background-color: white;
-        font-size: 20px;
+    li{
+       list-style: none; 
     }
 
-    #nav-bar img{
-        width: 37px;
-        height: 56px;
-    }
-
-    #nav-bar h5{
-        color:#004C1F;
-        margin-left: -200px;
-    }
-
-    #nav-bar ul li{
-        list-style-type: none;
-        display:inline-block;
-        padding: 10px 20px;
-        font-weight: bold;
-    }
-
-    #nav-bar ul li a{
+    a{
         text-decoration: none;
-        color: black;
+        color: #000000;
+        font-size: 1rem;
     }
 
-    #nav-bar ul li a:hover{
+    a:hover{
         text-decoration: none;
         color: #004C1F;
         font-weight: bold;
@@ -67,77 +39,149 @@
         transition: 2s;
     }
 
-    #btn-1{
+    .space{
+        margin-bottom: 2rem;
+    }
+
+    .navbar {
+        width: 100%;
+        height: 76px;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff;
+        border-radius: 81px;
+    }
+
+    .navbar .logo a{
+        font-size: 1rem;
+    }
+
+    .logo{
+        display: flex;
+        align-items: center;
+    }
+
+    .navbar .links{
+        display: flex;
+        gap: 2rem;
+    }
+
+    .links li a{
+        display: inline;
+        margin-right: 40px;
+        font-weight: 500;
+        justify-content: space-between;
+
+    }
+
+    .navbar .toggle_btn{
+        color: #000;
+        font-size: 1.5rem;
+        display: none;
+        margin-right: 1rem;
+        cursor: pointer;
+    }
+
+    .action_btn:hover{
+        scale: 1.05;
+        transition: 0.5s;
+        color:#fff;
+        background-color: #004C1F;
+    }
+
+    .action_btn{
         border: 3px solid green;
         background-color: white;
         color: black;
         border-radius: 30px;
-        font-size: 20px;
+        font-size: 14px;
         font-weight: bold;
         cursor: pointer;
-        width: Hug (94px)px;
-        height: Hug (40px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 4px;
-        border-radius: 34px;
-        border: 2px solid #004C1F ;
-        }
-
-        #btn-1:hover{
-            background-color:#004C1F;
-            color:#FFFFFF;
-            border-radius: 30px;
-            font-size: 20px;
-            font-weight: bold;
-            cursor: pointer;
-            width: Hug (94px)px;
-            height: Hug (40px)px;
-            padding: 8px 16px 8px 16px;
-            gap: 4px;
-            border-radius: 34px;
-            border: 2px solid #004C1F ;
-            transition: 0.3s;
-            }
-
-    #btn-2{
-        border:none;
-        background-color: #004C1F;
-        color:#EBFDD3;
-        padding: 1rem;
-        border-radius: 30px;
-        font-size: 20px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (80px)px;
-        height: Hug (40px)px;
+        width: Hug (74px)px;
+        height: Hug (37px)px;
         padding: 8px 16px 8px 16px;
         gap: 10px;
         border-radius: 35px;
-        margin-right: -190px;
+        border: 1px solid #004C1F ;
+        margin-left: -12rem;
     }
 
-    #btn-2:hover{
-        border:2px solid #004C1F;
-        background-color: #FFFFFF;
+    .action_btn-1{
+        background-color:#004C1F;
+        color: #fff;
+        border-radius: 30px;
+        font-size: 14px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (74px)px;
+        height: Hug (37px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 10px;
+        border-radius: 35px;
+        border: 1px solid #004C1F ;
+    }
+
+    .action_btn-1:hover{
+        scale: 1.05;
+        transition: 0.5s;
         color:#004C1F;
-        padding: 1rem;
-        border-radius: 30px;
-        font-size: 20px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (80px)px;
-        height: Hug (40px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 10px;
-        border-radius: 35px;
-        margin-right: -190px;
+        background-color: #fff;
     }
+
+    .dropdown_menu{
+        display: none;
+        position: absolute;
+        right: 1rem;
+        top: 150px;
+        height: 0;
+        width: 300px;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
+
+    }
+
+    .dropdown_menu .open{
+        height: 100vh;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
+    }
+
 
     .hero-info{
-        text-align: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
 
     .hero-info h1{
+        text-align: center;
         color: white;
         font-size: 60px;
     }
@@ -1233,51 +1277,26 @@
    
 
 @media (max-width:1900px){
-    .hero{
+    header{
         height: 100vh;
-        width: 1340px;
-        background-image: url(./images/background-image.jpeg);
+        background-image: url(images/background-image.jpeg);
+        background-size: cover;
         background-position: center;
-        background-size:cover;
+        position: relative;
+        padding: 0 2rem;
     }
 
-    #nav-bar{
-        display: flex;
-        align-items: center;
-        width:1100px;
-        margin: 3rem 7rem 3rem 7rem;
-        height: 75px;
-        padding: 12px 20px 12px 20px;
-        gap: 120px;
-        border-radius: 81px;
-        opacity: 0px;
-        font-size: 16px;
+    li{
+       list-style: none; 
     }
 
-    #nav-bar img{
-        width: 36.75px;
-        height: 55.5px;
-        
-    }
-    
-    #nav-bar h5{
-        color:#004C1F;
-        margin-left: -190px;
-    }
-    
-    #nav-bar ul li{
-        list-style-type: none;
-        display:inline-block;
-        padding: 10px 10px;
-        font-weight: bold;
-    }
-    
-    #nav-bar ul li a{
+    a{
         text-decoration: none;
-        color: black;
+        color: #000000;
+        font-size: 1rem;
     }
-    
-    #nav-bar ul li a:hover{
+
+    a:hover{
         text-decoration: none;
         color: #004C1F;
         font-weight: bold;
@@ -1285,8 +1304,55 @@
         top: -5px;
         transition: 2s;
     }
-    
-    #btn-1{
+
+    .space{
+        margin-bottom: 2rem;
+    }
+
+    .navbar {
+        width: 100%;
+        height: 76px;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff;
+        border-radius: 81px;
+    }
+
+    .navbar .logo a{
+        font-size: 1rem;
+    }
+
+    .logo{
+        display: flex;
+        align-items: center;
+    }
+
+    .navbar .links{
+        display: flex;
+        gap: 2rem;
+    }
+
+    .links li a{
+        display: inline;
+        margin-right: 40px;
+        font-weight: 500;
+        justify-content: space-between;
+
+    }
+
+    .action_btn:hover{
+        scale: 1.05;
+        transition: 0.5s;
+        color:#fff;
+        background-color: #004C1F;
+    }
+
+    .action_btn{
         border: 3px solid green;
         background-color: white;
         color: black;
@@ -1299,72 +1365,91 @@
         padding: 8px 16px 8px 16px;
         gap: 10px;
         border-radius: 35px;
-        margin-left: 10px;
         border: 1px solid #004C1F ;
-        }
-    
-    #btn-1:hover{
-        background-color:#004C1F;
-        color:#FFFFFF;
-        border-radius: 30px;
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (74px)px;
-        height: Hug (37px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 10px;
-        border-radius: 35px;
-        border: 1px solid #004C1F;
-        transition: 0.3s;
+        margin-left: -12rem;
     }
-    
-    #btn-2{
-        border:none;
-        background-color: #004C1F;
-        color:#EBFDD3;
-        padding: 1rem;
-        border-radius: 30px;
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (74px)px;
-        height: Hug (37px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 10px;
-        border-radius: 35px;
-    }
-    
-    #btn-2:hover{
-        border:2px solid #004C1F;
-        background-color: #FFFFFF;
-        color:#004C1F;
-        padding: 1rem;
-        border-radius: 30px;
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (80px)px;
-        height: Hug (40px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 10px;
-        border-radius: 35px;
-    }
-    
-    .hero-info{
-        text-align: center;
 
+    .action_btn-1{
+        background-color:#004C1F;
+        color: #fff;
+        border-radius: 30px;
+        font-size: 14px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (74px)px;
+        height: Hug (37px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 10px;
+        border-radius: 35px;
+        border: 1px solid #004C1F ;
     }
-    
+
+    .action_btn-1:hover{
+        scale: 1.05;
+        transition: 0.5s;
+        color:#004C1F;
+        background-color: #fff;
+    }
+
+    .dropdown_menu{
+        display: none;
+        position: absolute;
+        right: 5rem;
+        top: 150px;
+        height: 300px;
+        width: 300px;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
+    }
+
+    .dropdown_menu .open{
+        height: 300px;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        color: #fff;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
+    }
+
+
+    .hero-info{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 5rem;
+    }
+
     .hero-info h1{
+        text-align: center;
         color: white;
-        font-size: 48px;
+        font-size: 50px;
     }
-    
+
     .hero-info h3{
         color: white;
         margin-top: 25px;
-        font-size: 24px;
+        font-size: 20px;
+        text-align: center;
         font-weight: 500;
     }
     
@@ -2455,51 +2540,26 @@
 
 
 @media (max-width:1200px){
-    .hero{
-        height: 581px;
-        width: 1200px;
-        background-image: url(./images/background-image.jpeg);
+    header{
+        height: 100vh;
+        background-image: url(images/background-image.jpeg);
+        background-size: cover;
         background-position: center;
-        background-size:cover;
+        position: relative;
+        padding: 0 2rem;
     }
 
-    #nav-bar{
-        display: flex;
-        align-items: center;
-        width:901px;
-        margin: 3rem 7rem 3rem 7rem;
-        height: 65px;
-        padding: 12px 24px 12px 24px;
-        gap: 120px;
-        border-radius: 81px;
-        opacity: 0px;
-        font-size: 14px;
+    li{
+       list-style: none; 
     }
 
-    #nav-bar img{
-        width: 36.75px;
-        height: 55.5px;
-        
-    }
-    
-    #nav-bar h5{
-        color:#004C1F;
-        margin-left: -140px;
-    }
-    
-    #nav-bar ul li{
-        list-style-type: none;
-        display:inline-block;
-        padding: 10px 10px;
-        font-weight: bold;
-    }
-    
-    #nav-bar ul li a{
+    a{
         text-decoration: none;
-        color: black;
+        color: #000000;
+        font-size: 1rem;
     }
-    
-    #nav-bar ul li a:hover{
+
+    a:hover{
         text-decoration: none;
         color: #004C1F;
         font-weight: bold;
@@ -2507,8 +2567,55 @@
         top: -5px;
         transition: 2s;
     }
-    
-    #btn-1{
+
+    .space{
+        margin-bottom: 2rem;
+    }
+
+    .navbar {
+        width: 100%;
+        height: 76px;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff;
+        border-radius: 81px;
+    }
+
+    .navbar .logo a{
+        font-size: 1rem;
+    }
+
+    .logo{
+        display: flex;
+        align-items: center;
+    }
+
+    .navbar .links{
+        display: flex;
+        gap: 2rem;
+    }
+
+    .links li a{
+        display: inline;
+        margin-right: 40px;
+        font-weight: 500;
+        justify-content: space-between;
+
+    }
+
+    .action_btn:hover{
+        scale: 1.05;
+        transition: 0.5s;
+        color:#fff;
+        background-color: #004C1F;
+    }
+
+    .action_btn{
         border: 3px solid green;
         background-color: white;
         color: black;
@@ -2521,13 +2628,13 @@
         padding: 8px 16px 8px 16px;
         gap: 10px;
         border-radius: 35px;
-        margin-left: 70px;
         border: 1px solid #004C1F ;
-        }
-    
-    #btn-1:hover{
+        margin-left: -7rem;
+    }
+
+    .action_btn-1{
         background-color:#004C1F;
-        color:#FFFFFF;
+        color: #fff;
         border-radius: 30px;
         font-size: 14px;
         font-weight: bold;
@@ -2537,58 +2644,76 @@
         padding: 8px 16px 8px 16px;
         gap: 10px;
         border-radius: 35px;
-        border: 1px solid #004C1F;
-        transition: 0.3s;
+        border: 1px solid #004C1F ;
     }
-    
-    #btn-2{
-        border:none;
-        background-color: #004C1F;
-        color:#EBFDD3;
-        padding: 1rem;
-        border-radius: 30px;
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (74px)px;
-        height: Hug (37px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 10px;
-        border-radius: 35px;
 
-
-    }
-    
-    #btn-2:hover{
-        border:2px solid #004C1F;
-        background-color: #FFFFFF;
+    .action_btn-1:hover{
+        scale: 1.05;
+        transition: 0.5s;
         color:#004C1F;
-        padding: 1rem;
-        border-radius: 30px;
-        font-size: 14px;
-        font-weight: bold;
-        cursor: pointer;
-        width: Hug (80px)px;
-        height: Hug (40px)px;
-        padding: 8px 16px 8px 16px;
-        gap: 10px;
-        border-radius: 35px;
+        background-color: #fff;
     }
+
+    .dropdown_menu{
+        display: none;
+        position: absolute;
+        padding: 1rem;
+        right: 5rem;
+        top: 150px;
+        height: 320px;
+        width: 300px;
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
+    }
+
+    .dropdown_menu .open{
+        height: 300px;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        color: #fff;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
+    }
+
     
     .hero-info{
-        text-align: center;
-
+        display: flex;
+        align-items: center;
+        flex-direction: column;
     }
-    
+
     .hero-info h1{
+        text-align: center;
         color: white;
         font-size: 32px;
     }
-    
+
+
     .hero-info h3{
         color: white;
         margin-top: 25px;
-        font-size: 16px;
+        font-size: px;
+        text-align: center;
         font-weight: 500;
     }
     
@@ -3676,6 +3801,27 @@
     
 }
 
-@media (max-width:900){
-    
+@media (max-width:1080px){
+    .links li a, .action_btn-1, .action_btn{
+        display: none;
+    }
+
+    .navbar .toggle_btn{
+        display: block;
+    }
+
+    .dropdown_menu{
+        display: block;
+    }
+
+    .dropdown_menu li a{
+        display: block;
+    }
+}
+
+@media (max-width:576px){
+    .dropdown_menu{
+        left: 2rem;
+        width: unset;
+    }
 }
