--- a/index.css
+++ b/index.css
@@ -2056,11 +2056,10 @@
     .consulting-flex{
         display: flex;
         justify-content: space-between;
-        width: 100vw;
     }
     
     .flex-1 img{
-        width: 30px;
+        width: 20rem;
         height: 240px;
         top: 3350.63px;
         left: 137.58px;
@@ -3850,7 +3849,7 @@
     }
 
     .hero-info{
-        margin-top: 20px;
+        margin-top: 50px;
     }
     
     .hero-info h1{
@@ -3858,7 +3857,7 @@
     }
 
     .hero-info h3{
-        font-size: 18px;
+        font-size: 16px;
     }
 
     .hero-button{
@@ -3866,8 +3865,8 @@
     }
 
     .subsection{
-        margin-left: 1rem;
-        margin-right: 1rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
 
     }
     .achievment h1{
@@ -3887,6 +3886,10 @@
         flex-direction: column;
         margin-top: 5px;
         align-items: center;
+    }
+
+    #Cultivating-innovation{
+        margin-bottom: 20px;
     }
 
     .about-us span{
@@ -3915,7 +3918,7 @@
     }
 
     #Monthly{
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 600;
         width: 180px;
         height: 40px;
@@ -3923,11 +3926,19 @@
     }
 
     #Annual{
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 600;
         width: 180px;
         height: 40px;
         border-radius: 7.88px;  
+    }
+
+    .main-price{
+        font-size:24px;
+    }
+
+    .main-price span{
+        font-size: 16px;
     }
     
     .plans{
@@ -3955,6 +3966,11 @@
         font-size: 14px;
         font-weight: 500;
     }
+
+    .see-products a{
+        font-size: 13px;
+    }
+
     .frame-4{
         flex-direction: column;
     }
@@ -3962,4 +3978,122 @@
     .frame-4-info{
         flex-direction: column;
     }
+
+    .frame-4-img img{
+        width: 258px;
+        height: 328px;
+        margin-left: -20px;
+        margin-top: 20px;
+        margin-right: 50px;
+    }
+
+    .benefits{
+        flex-direction: column;
+    }
+
+    .benefits-1{
+        width: 288px;
+        height: 277px;
+        margin-left: 25px;
+        border-radius: 24px;
+        margin-bottom: 30px;
+    }
+
+    .benefits-1:hover{
+        width: 300px;
+        transition: 0.5s;
+    }
+
+    #consulting h3{
+        font-size: 24px;
+        margin-top: 30px;
+        margin-bottom: 20px;
+        line-height: 24px;
+        text-align: center;
+    }
+
+    #consulting h5{
+        font-size: 14px;
+        line-height: 21px;
+        text-align: center;
+    }
+
+    .consulting-flex{
+        flex-direction: column;
+    }
+
+    .flex-1 img{
+        margin-left: 1.5rem;
+    }
+
+    .consulting-buttons{
+        display: flex;
+        flex-direction: row;
+        justify-items: center;
+        align-items: center;
+    }
+
+    .consulting-buttons button{
+        margin-top: 2rem;
+    }
+
+    #blog{
+        flex-direction: column;
+    }
+
+    .testimonials-1{
+
+        width: 100%;
+        margin-bottom: 2rem;
+
+    }
+
+    .slide{
+        flex-direction: column;     
+    }
+
+    .accordion{
+        margin-right: 35rem;
+        margin-left:-1rem ;
+    }
+
+    .newsletter h1{
+        font-size: 24px;
+        line-height: 36px;
+    }
+
+    .newsletter h5{
+        margin-left:10px;
+        margin-right:10px;
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    .newsletter-user-info{
+        width: 358px;
+        height: 52px;
+        top: 191px;
+        left: 20px;
+        padding: 10px 16.24px 10px 16px;
+        border-radius: 64px;
+    }
+
+    .newsletter-user-info button{
+        width: Hug (111.76px)px;
+        height: Hug (32px)px;
+        top: 10px;
+        left: 230px;
+        padding: 4px 8px 4px 8px;
+        gap: 8px;
+        border-radius: 41px;
+    }
+
+    .footer{
+        flex-direction: column;
+        justify-items: left;
+    }
+
+
+      
+      
 }
