--- a/index.css
+++ b/index.css
@@ -3853,7 +3853,7 @@
     }
     
     .hero-info h1{
-        font-size:26px ;
+        font-size:28px ;
     }
 
     .hero-info h3{
@@ -3950,12 +3950,24 @@
         margin-bottom: 20px;
     }
 
+    .growth-plan:hover{
+        width: 100%;
+    }
+
     .Pro-plan{
         width: 100%;
         margin-bottom: 20px;
     }
 
+    .Pro-plan:hover{
+        width: 100%;
+    }
+
     .Elite-plan{
+        width: 100%;
+    }
+
+    .Elite-plan:hover{
         width: 100%;
     }
 
@@ -3994,7 +4006,7 @@
     .benefits-1{
         width: 288px;
         height: 277px;
-        margin-left: 25px;
+        margin-left: 15px;
         border-radius: 24px;
         margin-bottom: 30px;
     }
@@ -4023,7 +4035,7 @@
     }
 
     .flex-1 img{
-        margin-left: 1.5rem;
+        margin-left: 0.5rem;
     }
 
     .consulting-buttons{
@@ -4031,10 +4043,12 @@
         flex-direction: row;
         justify-items: center;
         align-items: center;
+        margin-right:1rem ;
     }
 
     .consulting-buttons button{
         margin-top: 2rem;
+        width: 9rem;
     }
 
     #blog{
@@ -4070,7 +4084,7 @@
     }
 
     .newsletter-user-info{
-        width: 358px;
+        width: 20rem;
         height: 52px;
         top: 191px;
         left: 20px;
@@ -4079,21 +4093,91 @@
     }
 
     .newsletter-user-info button{
-        width: Hug (111.76px)px;
-        height: Hug (32px)px;
+        width: 90px;
+        height: 32px;
         top: 10px;
         left: 230px;
         padding: 4px 8px 4px 8px;
         gap: 8px;
         border-radius: 41px;
+        font-size: 14px;
     }
 
-    .footer{
+    .newsletter-user-info input{
+        font-size: 14px;
+    }
+
+    .footer {
+        display: flex;
         flex-direction: column;
-        justify-items: left;
+        padding: 10px;
+        margin-left: -3rem;
+        width: 26.5rem;
     }
 
+    .footer img{
+        margin-left: -3rem;
+    }
 
-      
-      
+    .footer h5{
+        margin-left: -4rem;
+        margin-bottom: 1rem;
+    }
+
+    .footer-info-1 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start; /* Align items to the start */
+    }
+
+    .footer-info-1 a {
+        margin-bottom: 10px;
+        text-align: justify; /* Justify text for these links */
+    }
+
+    .footer-info-2 {
+        width: 28.5rem;
+        margin-top: -3rem;
+        margin-left: -5rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+        align-items: start;
+        text-align: left; /* Align text to the left for grid items */
+    }
+
+    .footer-info-2-link,
+    .footer-info-2-link-contact,
+    .footer-info-2-link-newsletter {
+        margin-left: -3.5rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        text-align: justify; /* Justify text for grid items */
+    }
+
+    .footer-info-2-link a,
+    .footer-info-2-link-contact a,
+    .footer-info-2-link-newsletter a {
+        margin-bottom: -5px;
+        margin-top: -15px;
+        display: block;
+        margin-bottom: 5px;
+        text-align: left; /* Align text to the left for links */
+    }
+
+    .footer-info-2-link-newsletter #subscribe {
+        flex-direction: column;
+        align-items: flex-start; /* Align items to the start */
+    }
+
+    .footer-info-2-link-newsletter input {
+        width: 80%;
+        margin-bottom: 5px;
+    }
+
+    .footer-info-2-link-newsletter button {
+        width: 80%;
+    }
 }
+    
